# vscode-onedrive-sync-router

./: .gitignore  README.md  masterprompt.md
.github/: copilot-instructions.md
agent/: README.md  pyproject.toml
agent/app/: config.py  conflict_detection.py  database.py  dry_run_provider.py  file_stability.py  main.py  migrations.py  models.py  path_utils.py  provider.py  queue_service.py  queue_worker.py  rule_engine.py  security.py
agent/config/: sync-router.example.json
agent/tests/: test_api.py  test_config.py  test_dedupe.py  test_file_stability.py  test_path_utils.py  test_queue_service.py  test_queue_worker.py  test_rule_engine.py  test_security.py
docs/: architecture.md  conflict-handling.md  development-roadmap.md  graph-provider-design.md  rules.md  setup-macos.md  setup-windows.md
prompts/: 00-project-overview.md  01-repo-structure.md  02-agent-fastapi-foundation.md  03-agent-configuration.md  04-path-security-and-root-resolution.md  05-rule-engine.md  06-database-and-migrations.md  07-queue-service.md  08-file-events-api.md  09-dedupe-and-coalescing.md  10-file-stability-and-revision-checks.md  11-provider-interface-and-dry-run-provider.md  12-conflict-detection.md  13-background-worker.md  14-agent-security.md  15-status-and-queue-endpoints.md  16-vscode-extension-scaffold.md  17-vscode-event-sender.md  18-vscode-status-bar-and-commands.md  19-testing-plan.md  20-documentation.md  21-github-actions-and-quality-gates.md  22-future-graph-provider-design.md  copilot-build-kickoff.md
vscode-extension/: README.md  package.json  tsconfig.json
(+13 files in other folders)
